# m32

./: .gitignore  CMakeLists.txt  README.md  m32Config.h.in
libM32CPU/: CMakeLists.txt  m32_cpu.h  m32_defines.h
m32_cpu/: CMakeLists.txt  m32_cpu.cpp  m32_cpu.h  m32_cpu.pro  main.cpp
m32_ide/: CMakeLists.txt  code_editor.cpp  code_editor.h  ide_main_window.cpp  ide_main_window.h  m32_ide.pro  main.cpp
