cmake_minimum_required(VERSION 2.8.9)
project(m32)

message(${CMAKE_BUILD_TYPE})

add_subdirectory(libM32CPU)
add_subdirectory(m32_cpu)
add_subdirectory(m32_ide)

set(CMake_VERSION_MAJOR "0")
set(CMake_VERSION_MINOR "1")

set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.MD")


SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Professor Ossmanns awesome M32")
SET(CPACK_PACKAGE_VENDOR "Me, myself, and I")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.MD")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${CMAKE_PROJECT_NAME} ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")


include(CPack)
